--- a/docs/TODO
+++ b/docs/TODO
@@ -1,6 +1,6 @@
 General:
-    * GHA: ignore changes to Makefile.impls and IMPLS.yml for
-      determining tests to run.
+    * update language graph code and data
+        - pull from GHA instead of Travis
 
     * Add self-hosted CI mode/variable
 
@@ -16,29 +16,30 @@ General:
     * Check that implementations are actually running self-hosted.
       Check for "mal-user>" prompt or something.
 
+    * update language graph code and data
+        * pull from GHA instead of Travis
+
+    * update get-changed-files
+        * use GITHUB_OUTPUT instead of set-output
+        * update version of node
+
     - Fix self-hosted implementations #662
 
-    - update get-changed-files
-        - use GITHUB_OUTPUT instead of set-output
-        - update version of node
+    - Fix wasm modes wax and wace_libc
 
-    - update language graph code and data
-        - pull from GHA instead of Travis
+    - Fix wasm perf3 hang/OOM
 
 All/multiple Implementations:
     - Add step3 and step4 tests. Fix powershell, jq, and xslt with
       binding/closures. https://github.com/kanaka/mal/issues/645
 
-common-lisp:
-    * Fix to run/build with latest sbcl/Ubuntu
-
 ---------------------------------------------
 
 Other ideas for All:
-    - propagate/print errors when self-hosted
-    - redefine (defmacro!) as (def! (macro*))
+    - redefine (defmacro!) as (def! foo (macro*))
     - Fix/implement interop in more implementations
 
+    - propagate/print errors when self-hosted
     - metadata on symbols (as per Clojure)
     - metadata as a map only. ^ merges metadata in the reader itself.
       Line numbers in metadata from reader.
@@ -56,9 +57,9 @@ Other ideas for All:
           the namespace environment. Need protocols first probably.
 
     - multi-line REPL read
-    - loop/recur ?
+    - explicit recur in loops (for error checking)
     - gensym reader inside quasiquote
-    - standalone executable
+    - standalone executables
 
 
 ---------------------------------------------
@@ -66,6 +67,7 @@ Other ideas for All:
 Bash:
     - explore using ${!prefix*} syntax (more like make impl)
     - GC
+    - maybe make it work more like basic/wasm
 
 C:
     - come up with better way to do 20 vararg code
