--- a/impls/latex3/types.sty
+++ b/impls/latex3/types.sty
@@ -5,6 +5,7 @@
 
 \cs_generate_variant:Nn \int_compare:nNnTF { oNoTF }
 \cs_generate_variant:Nn \int_const:Nn { NV }
+\cs_generate_variant:Nn \int_if_zero:nTF { VTF }
 \cs_generate_variant:Nn \int_set:Nn { Nx }
 \cs_generate_variant:Nn \int_to_alph:n { V }
 \cs_generate_variant:Nn \int_to_arabic:n { o, V }
